Changes for Azure VM support

--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,9 @@ PROXMOX_TOKEN_ID=user@realm!tokenid
 
 # API Token Secret (shown only once when token is created)
 PROXMOX_TOKEN_SECRET=your-token-secret
+
+# Azure Credentials 
+AZURE_CLIENT_ID=client-id
+AZURE_CLIENT_SECRET=client-secret
+AZURE_TENANT_ID=tenant-id
+AZURE_SUBSCRIPTION_ID=subscription-id
