add aws variables in .env.example

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-# Proxmox VE API Configuration
+# Proxmox VE Credentials
 # Copy this file to .env and fill in your Proxmox server details
 
 # Proxmox server hostname or IP address (with optional port, e.g., proxmox.example.com:8006)
@@ -16,3 +16,9 @@ AZURE_CLIENT_ID=client-id
 AZURE_CLIENT_SECRET=client-secret
 AZURE_TENANT_ID=tenant-id
 AZURE_SUBSCRIPTION_ID=subscription-id
+
+# AWS Credentials
+AWS_ACCESS_KEY_ID=aws-access-id
+AWS_SECRET_ACCESS_KEY=aws-secret-key
+AWS_REGION=us-east-1
+#AWS_SESSION_TOKEN= # OPTIONAL
